# sirius-gcs-test

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  conandata.yml  imgui.ini  main.cpp  premake5.lua  vcpkg.json
.github/workflows/: msbuild.yml
setup/: setup.bat
src/: ImGuiTextBufferSink.h  Logger.cpp  Logger.h  main.cpp
src/gui/: ControlsWindow.cpp  ControlsWindow.h  ImGuiManager.cpp  ImGuiManager.h  LoggingWindow.cpp  LoggingWindow.h
src/logging/: ImGuiCircularLogTextBuffer.cpp  ImGuiCircularLogTextBuffer.h  ImGuiTextBufferSink.cpp  ImGuiTextBufferSink.h  Logging.cpp  Logging.h
src/map/: Coords.h  IRichItem.h  ITile.h  ITileLoader.h  ITileSaver.h  ITileSource.h  LatLon.h  MapPlot.cpp  MapPlot.h  RichMapPlot.cpp  RichMapPlot.h  RichMarkItem.cpp  RichMarkItem.h  RichMarkStorage.cpp  RichMarkStorage.h  Tile.cpp  Tile.h  TileAsync.h  TileDummy.h  TileLoader.cpp  TileLoader.h  TileLoaderImpl.h  TileSourceAsync.cpp  TileSourceAsync.h  TileSourceFs.h  TileSourceUrl.cpp  TileSourceUrl.h  TileSourceUrlImpl.cpp  TileSourceUrlImpl.h
src/windows/: ControlsWindow.cpp  ControlsWindow.h  LoggingWindow.h
tests/: EntryPoint.cpp  TestExample.cpp  TestExample.h
